
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.jboss.seam.cron</groupId>
    <artifactId>seam-cron-parent</artifactId>
    <packaging>pom</packaging>
    <version>3.0.0-SNAPSHOT</version>
    <name>Seam Cron</name>
    <description>The parent and build aggregator for Seam Cron - Typesafe CDI Scheduling and Asynchronous method invocation</description>
    <url>http://seamframework.org/Seam3/CronModule</url>

    <scm>
       <connection>scm:git:git://github.com/seam/cron.git</connection>
       <developerConnection>scm:git:git@github.com:seam/cron.git</developerConnection>
       <url>http://github.com/seam/cron</url>
    </scm>

    <parent>
        <artifactId>seam-parent</artifactId>
        <groupId>org.jboss.seam</groupId>
        <version>10</version>
    </parent>

    <modules>
        <module>api</module>
        <module>impl</module>
        <module>spi</module>
        <module>tck</module>
        <module>providers/scheduling/quartz</module>
        <module>providers/asynchronous/threads</module>
        <module>providers/asynchronous/quartz</module>
        <module>combined</module>
    </modules>

    <properties>
        <version.jboss.javaee6.bom>1.0.0.Final</version.jboss.javaee6.bom>
        <seam.version>3.0.0.Final</seam.version>
        <arquillian.version>1.0.0.Alpha5</arquillian.version>
    </properties>
    <!-- Dependency management, including extra repositories if needed -->
    <repositories>
        <repository>
            <id>repository.jboss.org</id>
            <name>JBoss Release Repository</name>
            <url>https://repository.jboss.org/nexus/content/groups/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.0.2</version>
                <configuration>
                    <source>1.5</source>
                    <target>1.5</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-client -Xmx896m -XX:MaxPermSize=192m</argLine>
                    <forkMode>once</forkMode>
                    <includes>
                        <include>**/**/*Test.java</include>
                    </includes>
                    <excludes>
                        <exclude>**/**/*LongTest.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.google.code.maven-license-plugin</groupId>
                <artifactId>maven-license-plugin</artifactId>
                <version>1.4.0</version>
                <configuration>
                    <basedir>${basedir}</basedir>
                    <header>${basedir}/src/etc/header.txt</header>
                    <quiet>false</quiet>
                    <failIfMissing>true</failIfMissing>
                    <aggregate>false</aggregate>
                    <encoding>UTF-8</encoding>
                    <includes>
                        <include>src/**/*.java</include>
                        <include>src/**/*.xml</include>
                    </includes>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jboss.spec</groupId>
                <artifactId>jboss-javaee6-specs-bom</artifactId>
                <version>${version.jboss.javaee6.bom}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>            
            <dependency>
                <groupId>org.jboss.seam</groupId>
                <artifactId>seam-bom</artifactId>
                <version>${seam.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>           
            
            <!-- Inter-project dependencies -->
            <dependency>
                <groupId>org.jboss.seam.cron</groupId>
                <artifactId>seam-cron-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.seam.cron</groupId>
                <artifactId>seam-cron-api</artifactId>
                <classifier>sources</classifier>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.seam.cron</groupId>
                <artifactId>seam-cron-api</artifactId>
                <classifier>javadoc</classifier>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.seam.cron</groupId>
                <artifactId>seam-cron-impl</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.seam.cron</groupId>
                <artifactId>seam-cron-impl</artifactId>
                <classifier>sources</classifier>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.seam.cron</groupId>
                <artifactId>seam-cron-impl</artifactId>
                <classifier>javadoc</classifier>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.seam.cron</groupId>
                <artifactId>seam-cron-spi</artifactId>
                <version>${project.version}</version>
            </dependency>    
            <dependency>
                <groupId>org.jboss.seam.cron</groupId>
                <artifactId>seam-cron-spi</artifactId>
                <classifier>sources</classifier>
                <version>${project.version}</version>
            </dependency>    
            <dependency>
                <groupId>org.jboss.seam.cron</groupId>
                <artifactId>seam-cron-spi</artifactId>
                <classifier>javadoc</classifier>
                <version>${project.version}</version>
            </dependency>    
            <dependency>
                <groupId>org.jboss.seam.cron</groupId>
                <artifactId>seam-cron-asynchronous-quartz</artifactId>
                <version>${project.version}</version>
            </dependency>    
            <dependency>
                <groupId>org.jboss.seam.cron</groupId>
                <artifactId>seam-cron-asynchronous-threads</artifactId>
                <version>${project.version}</version>
            </dependency>         
            <dependency>
                <groupId>org.jboss.seam.cron</groupId>
                <artifactId>seam-cron-scheduling-quartz</artifactId>
                <version>${project.version}</version>
            </dependency>            
            <dependency>
                <groupId>org.jboss.seam.cron</groupId>
                <artifactId>seam-cron-reference-guide</artifactId>
                <type>war</type>
                <version>${project.version}</version>
            </dependency>            
            <dependency>
                <groupId>org.jboss.seam.cron</groupId>
                <artifactId>seam-cron-example-swing-graph</artifactId>
                <type>zip</type>
                <version>${project.version}</version>
            </dependency>            
            
            
            <!-- Dependencies for API sub-project -->
            <dependency>
                <groupId>javax.time</groupId>
                <artifactId>jsr-310-ri</artifactId>
                <version>20100212</version>
            </dependency>

            <!-- Dependencies for Implementation sub-project -->
            <dependency>
                <groupId>org.jboss.seam.solder</groupId>
                <artifactId>seam-solder</artifactId>
                <version>3.0.0.Final</version>
            </dependency>
            <dependency>
                <groupId>commons-lang</groupId>
                <artifactId>commons-lang</artifactId>
                <version>2.4</version>
            </dependency>

            <dependency>
                <groupId>org.jboss.arquillian</groupId>
                <artifactId>arquillian-junit</artifactId>
                <version>${arquillian.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- Dependencies for providers/quartz sub-project -->
            <!-- Runtime Dependencies -->
            <dependency>
                <groupId>org.opensymphony.quartz</groupId>
                <artifactId>quartz</artifactId>
                <version>1.6.1</version>
            </dependency>
            <dependency>
                <groupId>commons-collections</groupId>
                <artifactId>commons-collections</artifactId>
                <version>3.2.1</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>1.1.1</version>
                <scope>runtime</scope>
            </dependency>
            
            <!-- Dependencies for examples -->
            <dependency>
                <groupId>jfree</groupId>
                <artifactId>jfreechart</artifactId>
                <version>1.0.0</version>
            </dependency>
        
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>distribution</id>
            <activation>
                <property>
                    <name>release</name>
                </property>
            </activation>
            <modules>
                <module>examples/swing_memory_grapher</module>
                <module>docs/reference</module>
                <module>dist</module>
            </modules>
        </profile>
        <profile>
            <id>swing-example</id>
            <activation>
                <property>
                    <name>swing-example</name>
                </property>
            </activation>
            <modules>
                <module>examples/swing_memory_grapher</module>
            </modules>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <skipTests>true</skipTests>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        
        <!-- Testing Profiles -->
        <profile>
            <id>weld-se-embedded-11</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <property>
                    <name>release</name>
                </property>                
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.jboss.arquillian.container</groupId>
                    <artifactId>arquillian-weld-se-embedded-1.1</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.jboss.weld</groupId>
                    <artifactId>weld-core</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.jboss.weld</groupId>
                    <artifactId>weld-api</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-simple</artifactId>
                    <scope>test</scope>
                </dependency>
            </dependencies>
            <dependencyManagement>
                <dependencies>
                    <dependency>
                        <groupId>org.jboss.weld</groupId>
                        <artifactId>weld-core-bom</artifactId>
                        <version>1.1.0.Final</version>
                        <type>pom</type>
                        <scope>import</scope>
                    </dependency>
                </dependencies>
            </dependencyManagement>
        </profile>        
        <profile>
            <id>glassfish-embedded-3.1</id>
            <dependencies>
                <dependency>
                    <groupId>org.jboss.arquillian.container</groupId>
                    <artifactId>arquillian-glassfish-embedded-3.1</artifactId>
                    <version>1.0.0.Alpha5</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.glassfish.extras</groupId>
                    <artifactId>glassfish-embedded-all</artifactId>
                    <version>3.1</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.geronimo.ext.tomcat</groupId>
                    <artifactId>jasper-el</artifactId>
                    <version>7.0.0.1</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>openwebbeans-embedded-1</id>
            <dependencies>
                <dependency>
                    <groupId>org.jboss.arquillian.container</groupId>
                    <artifactId>arquillian-openwebbeans-embedded-1</artifactId>
                    <version>1.0.0.Alpha5</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.openwebbeans</groupId>
                    <artifactId>openwebbeans-spi</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.openwebbeans</groupId>
                    <artifactId>openwebbeans-impl</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.geronimo.specs</groupId>
                    <artifactId>geronimo-el_2.2_spec</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.geronimo.specs</groupId>
                    <artifactId>geronimo-jta_1.1_spec</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.geronimo.specs</groupId>
                    <artifactId>geronimo-validation_1.0_spec</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.geronimo.specs</groupId>
                    <artifactId>geronimo-interceptor_1.1_spec</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.geronimo.specs</groupId>
                    <artifactId>geronimo-jcdi_1.0_spec</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.geronimo.specs</groupId>
                    <artifactId>geronimo-atinject_1.0_spec</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.geronimo.specs</groupId>
                    <artifactId>geronimo-servlet_2.5_spec</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-simple</artifactId>
                    <scope>test</scope>
                </dependency>
            </dependencies>
            <dependencyManagement>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.openwebbeans</groupId>
                        <artifactId>openwebbeans</artifactId>
                        <version>1.0.0</version>
                        <type>pom</type>
                        <scope>import</scope>
                    </dependency>
                </dependencies>
            </dependencyManagement>
        </profile>
    </profiles>
</project>
